--- a/Map Builder/index.html
+++ b/Map Builder/index.html
@@ -21,7 +21,7 @@
         <option value="3">Tree</option>
     </select>
 
-    <button id="getData">Exportier mich</button>
+    <button id="getButton">Exportier mich</button>
 
     <table id="layer1" draggable="false"></table>
     <table id="layer2" draggable="false" class="hidden"></table>
@@ -30,7 +30,7 @@
         
     </textarea>
 
-    <button id="giveData">Importier mich</button>
+    <button id="giveButton">Importier mich</button>
 
 </body>
 </html>
