--- a/Map Builder/index.html
+++ b/Map Builder/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/layout.css">
-    <script src="/js/main.js" defer></script>
+    <script src="./js/main.js" defer></script>
     <title>Mab Builder</title>
 </head>
 <body>
@@ -21,7 +21,13 @@
         <option value="3">Tree</option>
     </select>
 
+    <label>
+        brushSize
+        <input id="brush-size-range" type="range" min="1" max="20" value="1">
+    </label>
+
     <button id="getButton">Exportier mich</button>
+
 
     <table id="layer1" draggable="false"></table>
     <table id="layer2" draggable="false" class="hidden"></table>
