--- a/Map Builder/index.html
+++ b/Map Builder/index.html
@@ -26,7 +26,7 @@
         <input id="brush-size-range" type="range" min="1" max="20" value="1">
     </label>
 
-    <button id="getButton">Exportier mich</button>
+    <button id="getButton">Export</button>
 
 
     <table id="layer1" draggable="false"></table>
@@ -36,7 +36,7 @@
         
     </textarea>
 
-    <button id="giveButton">Importier mich</button>
+    <button id="giveButton">Import</button>
 
 </body>
 </html>
