added monsters to map and map tool

--- a/Map Builder/index.html
+++ b/Map Builder/index.html
@@ -19,6 +19,7 @@
         <option value="1">Ground</option>
         <option value="2">Rock</option>
         <option value="3">Tree</option>
+        <option value="24">Monster</option>
     </select>
 
     <label>
